fix: update-info and manage info
