# backend/docs/swagger.yaml
@@ -371,33 +371,6 @@ paths:
       summary: Company register
       tags:
       - Company
-  /company/search:
-    get:
-      consumes:
-      - application/json
-      description: Get Companies by term
-      parameters:
-      - description: term
-        in: query
-        name: term
-        required: true
-        type: string
-      - description: 'Enum: 0 -> Account, 1 -> Name, 2 -> Address, 3 -> ManagerName,
-          4 -> MangerTel, 5 -> BusinessLicenseNumber'
-        in: query
-        name: type
-        required: true
-        type: integer
-      produces:
-      - application/json
-      responses:
-        "200":
-          description: Company Info
-          schema:
-            $ref: '#/definitions/response.GetCompaniesResp'
-      summary: Get Companies by term
-      tags:
-      - Manage
   /company/update-info:
     post:
       consumes:
@@ -478,7 +451,7 @@ paths:
       consumes:
       - application/json
       parameters:
-      - description: allow companies update request
+      - description: account不能修改，Body不能出现account，根据token来判断account，其余每一项都是可选的，但是必须要有一项
         in: body
         name: request_body
         required: true
@@ -592,6 +565,33 @@ paths:
           schema:
             $ref: '#/definitions/response.GetCompaniesCountResp'
       summary: Get info pending review companies count
+      tags:
+      - Manage
+  /manage/company/search:
+    get:
+      consumes:
+      - application/json
+      description: Get Companies by term
+      parameters:
+      - description: term
+        in: query
+        name: term
+        required: true
+        type: string
+      - description: 'Enum: 0 -> Account, 1 -> Name, 2 -> Address, 3 -> ManagerName,
+          4 -> MangerTel, 5 -> BusinessLicenseNumber'
+        in: query
+        name: type
+        required: true
+        type: integer
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: Company Info
+          schema:
+            $ref: '#/definitions/response.GetCompaniesResp'
+      summary: Get Companies by term
       tags:
       - Manage
 securityDefinitions:
